fix :make arrows visible

--- a/css/style.css
+++ b/css/style.css
@@ -913,20 +913,46 @@ template {
   left: 62px;
   top: 13px;
   width: 70px;
-  height: 70px;
-  background-image: url(../img/quote=left.svg);
+  height: 47px;
+  background-image: url(../img/quote-left.svg);
   background-repeat: no-repeat;
 }
 
 .reviews-slider__item:after {
   conent: '';
   position: absolute;
-  left: 62px;
-  top: 13px;
+  right: 62px;
+  top: 118px;
   width: 70px;
   height: 70px;
-  background-image: url(../img/quote=left.svg);
+  background-image: url(../img/quote-right.svg);
   background-repeat: no-repeat;
+}
+
+.reviews-slider__button {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  z-index: 99;
+  width: 30px;
+  height: 30px;
+  border: none;
+  cursor: pointer;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 10px;
+  background-color: transparent;
+}
+
+.reviews-slider__button--prev {
+  background-image: url(../img/arrow-prev-secondary.svg);
+  left: 0;
+}
+
+.reviews-slider__button--next {
+  background-image: url(../img/arrow-next-secondary.svg);
+  right: 0;
 }
 
 .reviews-slider__profile {
@@ -977,6 +1003,16 @@ template {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.reviews-slider__text {
+  max-width: 537px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 160%;
+  text-align: justify;
+  margin: auto;
 }
 
 @media (max-width: 1200px) {
