--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -23,15 +23,15 @@
         conent: ''
         position: absolute
         left: 62px
-        top: 13px
+        top: 13px 
         width: 70px
-        height: 70px
+        height: 47px
         background-image: url(../img/quote-left.svg)
         background-repeat: no-repeat
       &:after
         conent: ''
         position: absolute
-        right: : 62px
+        right: 62px
         top: 118px
         width: 70px
         height: 70px
@@ -41,15 +41,15 @@
       position: absolute
       top: 50%
       transform: translateY(-50%)
+      z-index: 99
       width: 30px
       height: 30px
+      border: none
+      cursor: pointer
       background-repeat: no-repeat
-      background-size: 10px
       background-position: center
-      border: 1px solid red
+      background-size: 10px
       background-color: transparent
-      z-index: 99
-      cursor: pointer 
       &--prev
         background-image: url(../img/arrow-prev-secondary.svg)
         left: 0
